--- a/12_列表渲染/8.Vue.set的使用.html
+++ b/12_列表渲染/8.Vue.set的使用.html
@@ -11,18 +11,19 @@
   
     <div id="root">
         <h1>school info</h1>
-        <h2>xuexiao name: {{name}}</h2>
-        <h2>xuexiao dizhi: {{add}}</h2>
+        <h2>xuexiao name: {{school.name}}</h2>
+        <h2>xuexiao dizhi: {{school.add}}</h2>
+        <h2>xiaozhang: {{leader}}</h2>
         <hr/>
         <h1>student info</h1>
-        <button>add a </button>
+        <button @click="addSex">add a sex</button>
         <h2>student name: {{student.name}}</h2>
         <h2>student rage: {{student.age.rAge}}</h2>
         <h2>student sage: {{student.age.sAge}}</h2>
-        <h2>student sex: {{student.sex}}</h2>
+        <h2 v-if="student.sex">student sex: {{student.sex}}</h2>
         <h2>friends</h2>
         <ul>
-            <li v-for="f in student.friends" :key="index">
+            <li v-for="(f,index) in student.friends" :key="index">
                 {{f.name}} - {{f.age}}
             </li>
         </ul>
@@ -34,8 +35,11 @@
      const vm =  new Vue({
             el:'#root',
             data:{
-                name: 'shanggugui',
-                add : 'place',
+                school:{
+                    name: 'shanggugui',
+                    add : 'place',
+                },
+               
                 student:{
                     id:1,
                     name:'comeon',
@@ -48,7 +52,13 @@
                         {name:'jerry',age:35}
                     ]
                 }
-           }
+           },
+           methods: {
+             addSex(){
+                Vue.set(this.student,'sex','man')
+                this.$set(this.student,'sex','woman')
+             }
+           },
         })
 
 
